--- a/easy_chefui/src/index.css
+++ b/easy_chefui/src/index.css
@@ -44,6 +44,10 @@ code {
   color: red;
   font-size: 12px;
 } */
+html, body {
+  overflow-x: hidden;
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
